<resources>
    <string name="app_name">firstTry</string>
    <string name="thinking_game">Thinking Game</string>
    <string name="lets_start">lets Start</string>
    <string name="your_question_is_if_you_have_a_stable_of_horses_consisting_of_6_horses_and_you_add_3_more_horses_to_them_how_much_is_the_total">Your Question is : If you have a stable of horses consisting of 6 horses, and you add 3 more horses to them, how much is the total?</string>
    <string name="submit">Submit</string>
    <string name="_1_3">1/3</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="if_we_have_3_horese_and_we_buy_new_3_horese_how_much_we_have">if we have 3 horese and we buy new 3 horese how much we have?</string>
    <string name="next">Next</string>
    <string name="congratulations">congratulations!!!</string>
</resources>