<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hjgjoh11"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="646dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/thinking_game"
        android:textColor="#616161"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="544dp"
        android:text="@string/lets_start"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <!--    <EditText-->
    <!--        android:id="@+id/editTextText2"-->
    <!--        android:layout_width="272dp"-->
    <!--        android:layout_height="63dp"-->
    <!--        android:layout_marginStart="70dp"-->
    <!--        android:layout_marginTop="359dp"-->
    <!--        android:layout_marginEnd="34dp"-->
    <!--        android:layout_marginBottom="309dp"-->
    <!--        android:autofillHints=""-->
    <!--        android:background="@color/white"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/app_name"-->
    <!--        android:inputType="text"-->
    <!--        android:text=""-->
    <!--        android:textColorHint="#757575"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="428dp"
        android:text="@string/_6"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="312dp"

        android:layout_marginEnd="164dp"
        android:layout_marginBottom="371dp"
        android:text="@string/_7"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="374dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="309dp"
        android:text="@string/_5"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="348dp"
        android:layout_height="161dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="469dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="115dp"

        android:background="@color/white"
        android:fontFamily="@font/abeezee"
        android:text="@string/if_we_have_3_horese_and_we_buy_new_3_horese_how_much_we_have"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="35dp"
        android:text="@string/next"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:visibility="gone"

        android:fontFamily="@font/abril_fatface"
        android:inputType="text"
        android:text="@string/congratulations"
        android:textColor="#00695C"
        android:textSize="27sp"
        tools:ignore="LabelFor,MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="374dp" />


</androidx.constraintlayout.widget.ConstraintLayout>